--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <canvas id="canvas" width="960" height="540"></canvas>
+    <canvas id="canvas" width="960" height="540" style="border: solid 1px"></canvas>
     <script src="Ball.js"></script>
     <script src="index.js"></script>
   </body>
